clear menu name

--- a/product-intro_A-2.html
+++ b/product-intro_A-2.html
@@ -1,14 +1,16 @@
+<!--제품소개 - 제품 구성도-->
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>오시는 길</title>
-  <link rel="stylesheet" href="base.css" />
-  <link rel="stylesheet" href="index.css" />
-  <link rel="stylesheet" href="mobile.css" />
-  <link rel="stylesheet" href="company.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>제품 구성도</title>
+      <link rel="stylesheet" href="base.css" />
+      <link rel="stylesheet" href="base_product.css" />
+      <link rel="stylesheet" href="mobile.css" />
+      <link rel="stylesheet" href="product-intro_A-2.css" />
+  </head>
+  <body>
 
 <!-- ✅ 헤더 -->
 <header>
@@ -136,67 +138,41 @@
 </div>
 
 
-  <!-- 회사 이미지 -->
-  <section class="location-hero">
-    <img src="images/jinyangtech.jpeg" alt="회사 전경 사진" />
-  </section>
+    <!-- 파란 배경 제목 -->
+    <section class="blue-title">
+      <h1>제품소개</h1>
+      <p>중앙집중식 청소기의 원리, 구성, 사용, 장점을 한눈에</p>
+    </section>
 
-  <!-- 주소 + 지도 -->
- <section class="location-wrapper">
-  <div class="location-info">
-    <h2>찾아오시는 길</h2>
+    <!-- 서브탭 메뉴 -->
+    <!-- 서브탭 메뉴 -->
+    <nav class="submenu">
+      <a href="product-intro_A-1.html">중앙집중식 청소기</a>
+      <a href="product-intro_A-2.html" class="active">제품 구성도</a>
+      <a href="product-intro_A-3.html">제품 장점</a>
+      <a href="product-intro_A-4.html">제품 사용방법</a>
+    </nav>
 
-    <div class="info-item">
-      <img src="images/gps.svg" alt="주소 아이콘" />
-      <strong>주소</strong>
-      <p class="address">경북 칠곡군 기산면 영리1길 14</p>
-    </div>
+    <!-- 본문 -->
+    <section class="product-diagram">
+      <div class="diagram-box">
+        <img src="images/senso_1.svg" alt="구성도 이미지 1">
+      </div>
+      <div class="diagram-box">
+        <img src="images/senso_2.svg" alt="구성도 이미지 2">
+      </div>
+    </section>
 
-    <div class="info-item">
-      <img src="images/email.svg" alt="이메일 아이콘" />
-      <strong>E-Mail</strong>
-      <p class="address">kdgk331@hanmail.net</p>
-    </div>
+    <!--하단-->
+    <footer>
+      <img src="images/black_logo.svg" alt="JINYANGTECH 로고">
+      <div class="info">
+        <p>회사명 : 진양테크 | 주소 : 경북 칠곡군 기산면 영리1길 14</p>
+        <p>PHNOE : 010 - 2528 - 1625 | TEL : 054 - 977 - 1624</p>
+        <p>이메일: kdgk331@hanmail.net | FAX: 054-977-1622 | </p>
+      </div>
+    </footer>
 
-    <div class="info-item">
-      <img src="images/PHONE.svg" alt="휴대폰 아이콘" />
-      <strong>PHONE</strong>
-      <p class="address">010-2528-1625</p>
-    </div>
-
-    <div class="info-item">
-      <img src="images/TEL.svg" alt="전화 아이콘" />
-      <strong>TEL</strong>
-      <p class="address">054-977-1624</p>
-    </div>
-
-    <div class="info-item">
-      <img src="images/fax.svg" alt="팩스 아이콘" />
-      <strong>FAX</strong>
-      <p class="address">054-977-1622</p>
-    </div>
-  </div>
-
-  <div class="location-map">
-    <div id="daumRoughmapContainer1752652677289" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-  </div>
-</section>
-
-
-
-
-  <!-- 푸터 -->
-  <footer>
-    <img src="images/black_logo.svg" alt="JINYANGTECH 로고" />
-    <div class="info">
-      <p>회사명 : 진양테크 | 주소 : 경북 칠곡군 기산면 영리1길 14</p>
-      <p>PHONE : 010-2528-1625 | TEL : 054-977-1624</p>
-      <p>이메일: kdgk331@hanmail.net | FAX: 054-977-1622</p>
-    </div>
-  </footer>
-  
-  <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
-  <script src="company.js"></script>
-  <script src="mobile.js"></script>
-</body>
+    <script src="mobile.js"></script>
+  </body>
 </html>
