--- a/supplies_A-1.html
+++ b/supplies_A-1.html
@@ -1,14 +1,16 @@
+<!--소모품 - 툴셋-->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>오시는 길</title>
-  <link rel="stylesheet" href="base.css" />
-  <link rel="stylesheet" href="index.css" />
-  <link rel="stylesheet" href="mobile.css" />
-  <link rel="stylesheet" href="company.css" />
+  <title>소모품 안내 - TOOL SET</title>
+      <link rel="stylesheet" href="base.css" />
+      <link rel="stylesheet" href="base_product.css" />
+      <link rel="stylesheet" href="mobile.css" />
+      <link rel="stylesheet" href="supplies_A-1.css" />
 </head>
+<body>
 
 <!-- ✅ 헤더 -->
 <header>
@@ -136,67 +138,97 @@
 </div>
 
 
-  <!-- 회사 이미지 -->
-  <section class="location-hero">
-    <img src="images/jinyangtech.jpeg" alt="회사 전경 사진" />
+<!-- 파란제목 -->
+  <section class="blue-title">
+    <h1>소모품</h1>
+    <p>중앙집중식 청소기 소모품 구성 소개</p>
   </section>
 
-  <!-- 주소 + 지도 -->
- <section class="location-wrapper">
-  <div class="location-info">
-    <h2>찾아오시는 길</h2>
+<!-- 서브탭 메뉴 -->
+  <nav class="submenu">
+    <a href="supplies_A-1.html" class="active">TOOL SET(악세서리)</a>
+    <a href="supplies_A-2.html">배관자재</a>
+  </nav>
 
-    <div class="info-item">
-      <img src="images/gps.svg" alt="주소 아이콘" />
-      <strong>주소</strong>
-      <p class="address">경북 칠곡군 기산면 영리1길 14</p>
-    </div>
+  <!--본문--> 
+   <section class="toolset-section">
+    <div class="tool-grid">
 
-    <div class="info-item">
-      <img src="images/email.svg" alt="이메일 아이콘" />
-      <strong>E-Mail</strong>
-      <p class="address">kdgk331@hanmail.net</p>
-    </div>
+      <div class="tool-item">
+        <div class="tool-image-box">
+          <img src="images/A_1.png" alt="손잡이(유.무선 겸용)">
+        </div>
+        <p>손잡이(유.무선 겸용)</p>
+      </div>
 
-    <div class="info-item">
-      <img src="images/PHONE.svg" alt="휴대폰 아이콘" />
-      <strong>PHONE</strong>
-      <p class="address">010-2528-1625</p>
-    </div>
+      <div class="tool-item">
+        <div class="tool-image-box">
+          <img src="images/A_2.png" alt="무선콘트롤(외부용)">
+        </div>
+        <p>무선콘트롤(외부용)</p>
+      </div>
 
-    <div class="info-item">
-      <img src="images/TEL.svg" alt="전화 아이콘" />
-      <strong>TEL</strong>
-      <p class="address">054-977-1624</p>
-    </div>
+      <div class="tool-item">
+        <div class="tool-image-box">
+          <img src="images/A_3.png" alt="전용 브러쉬">
+        </div>
+        <p>전용 브러쉬</p>
+      </div>
 
-    <div class="info-item">
-      <img src="images/fax.svg" alt="팩스 아이콘" />
-      <strong>FAX</strong>
-      <p class="address">054-977-1622</p>
-    </div>
-  </div>
+      <div class="tool-item">
+        <div class="tool-image-box">
+          <img src="images/A_4.png" alt="청소호스(7.5m)">
+        </div>
+        <p>청소호스(7.5m)</p>
+      </div>
 
-  <div class="location-map">
-    <div id="daumRoughmapContainer1752652677289" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+      <div class="tool-item">
+        <div class="tool-image-box">
+          <img src="images/A_5.png" alt="호스걸이">
+        </div>
+        <p>호스걸이</p>
+      </div>
+
+      <div class="tool-item">
+        <div class="tool-image-box">
+          <img src="images/A_6.png" alt="소파전용브러쉬">
+        </div>
+        <p>소파전용브러쉬</p>
+      </div>
+
+      <div class="tool-item">
+        <div class="tool-image-box">
+          <img src="images/A_7.png" alt="가구용브러쉬">
+        </div>
+        <p>가구용브러쉬</p>
+      </div>
+
+      <div class="tool-item">
+        <div class="tool-image-box">
+          <img src="images/A_8.png" alt="틈새브러쉬">
+        </div>
+        <p>틈새브러쉬</p>
+      </div>
+
+      <div class="tool-item">
+        <div class="tool-image-box">
+          <img src="images/A_9.png" alt="길이조절대(1.5m)">
+        </div>
+        <p>길이조절대(1.5m)</p>
+      </div>
   </div>
 </section>
 
+  <!--하단-->
+    <footer>
+      <img src="images/black_logo.svg" alt="JINYANGTECH 로고">
+      <div class="info">
+        <p>회사명 : 진양테크 | 주소 : 경북 칠곡군 기산면 영리1길 14</p>
+        <p>PHNOE : 010 - 2528 - 1625 | TEL : 054 - 977 - 1624</p>
+        <p>이메일: kdgk331@hanmail.net | FAX: 054-977-1622 | </p>
+      </div>
+    </footer>
 
-
-
-  <!-- 푸터 -->
-  <footer>
-    <img src="images/black_logo.svg" alt="JINYANGTECH 로고" />
-    <div class="info">
-      <p>회사명 : 진양테크 | 주소 : 경북 칠곡군 기산면 영리1길 14</p>
-      <p>PHONE : 010-2528-1625 | TEL : 054-977-1624</p>
-      <p>이메일: kdgk331@hanmail.net | FAX: 054-977-1622</p>
-    </div>
-  </footer>
-  
-  <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
-  <script src="company.js"></script>
-  <script src="mobile.js"></script>
-</body>
+    <script src="mobile.js"></script>
+  </body>
 </html>
