--- a/index.html
+++ b/index.html
@@ -37,56 +37,56 @@
   </div>
 
   <!--상단 pc메뉴-->
-<ul class="nav-links">
-  <li>
-    <a href="#">중앙집중식 청소기</a>
-    <ul class="dropdown">
-      <li>
-        <a href="#" class="has-sub">- 제품소개</a>
-        <ul class="sub-dropdown">
-          <li><a href="product-intro_1.html">중앙집중식 청소기</a></li>
-          <li><a href="product-intro_2.html">제품 구성도</a></li>
-          <li><a href="product-intro_3.html">제품 장점</a></li>
-          <li><a href="product-intro_4.html">제품 사용방법</a></li>
-        </ul>
-      </li>
-      <li><a href="product-types.html">- 제품 종류 및 사양</a></li>
-    </ul>
-  </li>
-  <li>
-    <a href="#">전열교환기</a>
-    <ul class="dropdown">
-      <li>
-        <a href="#" class="has-sub">- 제품소개</a>
-        <ul class="sub-dropdown">
-          <li><a href="product-intro_1.html">전열교환기</a></li>
-          <li><a href="product-intro_2.html">제품 구성도</a></li>
-          <li><a href="product-intro_3.html">제품 장점</a></li>
-          <li><a href="product-intro_4.html">제품 사용방법</a></li>
-        </ul>
-      </li>
-      <li><a href="product-types.html">- 제품 종류 및 사양</a></li>
-    </ul>
-  </li>
+  <ul class="nav-links">
+    <li>
+      <a href="#">중앙집중식 청소기</a>
+      <ul class="dropdown">
+        <li>
+          <a href="#" class="has-sub">- 제품소개</a>
+          <ul class="sub-dropdown">
+            <li><a href="product-intro_A-1.html">중앙집중식 청소기</a></li>
+            <li><a href="product-intro_A-2.html">제품 구성도</a></li>
+            <li><a href="product-intro_A-3.html">제품 장점</a></li>
+            <li><a href="product-intro_A-4.html">제품 사용방법</a></li>
+          </ul>
+        </li>
+        <li><a href="product-types-A.html">- 제품 종류 및 사양</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="#">전열교환기</a>
+      <ul class="dropdown">
+        <li>
+          <a href="#" class="has-sub">- 제품소개</a>
+          <ul class="sub-dropdown">
+            <li><a href="product-intro_B-1.html">전열교환기</a></li>
+            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
+            <li><a href="product-intro_B-3.html">제품 장점</a></li>
+            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+          </ul>
+        </li>
+        <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
+      </ul>
+    </li>
 
-  <li>
-    <a href="#">소모품</a>
-    <ul class="dropdown">
-      <li>
-        <a href="#" class="has-sub">- 중앙집중식 청소기</a>
-        <ul class="sub-dropdown">
-          <li><a href="supplies_1.html">TOOL SET(악세서리)</a></li>
-          <li><a href="supplies_2.html">배관자재</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#" class="has-sub">- 전열교환기</a>
-      </li>
-    </ul>
-  </li>
+    <li>
+      <a href="#">소모품</a>
+      <ul class="dropdown">
+        <li>
+          <a href="#" class="has-sub">- 중앙집중식 청소기</a>
+          <ul class="sub-dropdown">
+            <li><a href="supplies_A-1.html">TOOL SET(악세서리)</a></li>
+            <li><a href="supplies_A-2.html">배관자재</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="supplies_B-1.html" class="has-sub">- 전열교환기</a>
+        </li>
+      </ul>
+    </li>
 
-  <li><a href="company.html">회사소개</a></li>
-</ul>
+    <li><a href="company.html">회사소개</a></li>
+  </ul>
 </header>
 
 
@@ -105,13 +105,13 @@
         <li>
           <button class="sub-dropdown-btn">- 제품소개</button>
           <ul class="sub-dropdown-content">
-            <li><a href="product-intro_1.html">중앙집중식 청소기</a></li>
-            <li><a href="product-intro_2.html">제품 구성도</a></li>
-            <li><a href="product-intro_3.html">제품 장점</a></li>
-            <li><a href="product-intro_4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_A-1.html">중앙집중식 청소기</a></li>
+            <li><a href="product-intro_A-2.html">제품 구성도</a></li>
+            <li><a href="product-intro_A-3.html">제품 장점</a></li>
+            <li><a href="product-intro_A-4.html">제품 사용방법</a></li>
           </ul>
         </li>
-        <li><a href="product-types.html">- 제품 종류 및 사양</a></li>
+        <li><a href="product-types-A.html">- 제품 종류 및 사양</a></li>
       </ul>
     </li>
 
@@ -121,13 +121,13 @@
         <li>
           <button class="sub-dropdown-btn">- 제품소개</button>
           <ul class="sub-dropdown-content">
-            <li><a href="product-intro_1.html">전열교환기</a></li>
-            <li><a href="product-intro_2.html">제품 구성도</a></li>
-            <li><a href="product-intro_3.html">제품 장점</a></li>
-            <li><a href="product-intro_4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-1.html">전열교환기</a></li>
+            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
+            <li><a href="product-intro_B-3.html">제품 장점</a></li>
+            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
           </ul>
         </li>
-        <li><a href="product-types.html">- 제품 종류 및 사양</a></li>
+        <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
       </ul>
     </li>
 
@@ -137,12 +137,12 @@
         <li>
           <button class="sub-dropdown-btn">- 중앙집중식 청소기</button>
           <ul class="sub-dropdown-content">
-            <li><a href="psupplies_1.html">TOOL SET(악세서리)</a></li>
-            <li><a href="supplies_2.html">배관자재</a></li>
+            <li><a href="supplies_A-1.html">TOOL SET(악세서리)</a></li>
+            <li><a href="supplies_A-2.html">배관자재</a></li>
 
           </ul>
         </li>
-        <li><a href="product-types.html">- 전열교환기</a></li>
+        <li><a href="supplies_B-1.html">- 전열교환기</a></li>
       </ul>
     </li>
 
