--- a/product-intro_B-1.html
+++ b/product-intro_B-1.html
@@ -1,14 +1,16 @@
+<!--중앙집중식청소기 - 중앙집중식 청소기-->
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>오시는 길</title>
-  <link rel="stylesheet" href="base.css" />
-  <link rel="stylesheet" href="index.css" />
-  <link rel="stylesheet" href="mobile.css" />
-  <link rel="stylesheet" href="company.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>제품소개</title>
+      <link rel="stylesheet" href="base.css" />
+      <link rel="stylesheet" href="base_product.css" />
+      <link rel="stylesheet" href="mobile.css" />
+      <link rel="stylesheet" href="product-intro_B-1.css" />
+  </head>
+  <body>
 
 <!-- ✅ 헤더 -->
 <header>
@@ -136,67 +138,47 @@
 </div>
 
 
-  <!-- 회사 이미지 -->
-  <section class="location-hero">
-    <img src="images/jinyangtech.jpeg" alt="회사 전경 사진" />
+    <!-- 파란 배경 제목 -->
+    <section class="blue-title">
+      <h1>제품소개</h1>
+      <p>중앙집중식 청소기의 원리, 구성, 사용, 장점을 한눈에</p>
+    </section>
+
+    <!-- 서브탭 메뉴 -->
+  <nav class="submenu">
+      <a href="product-intro_B-1.html" class="active">중앙집중식 청소기</a>
+      <a href="product-intro_B-2.html">제품 구성도</a>
+      <a href="product-intro_B-3.html">제품 장점</a>
+      <a href="product-intro_B-4.html">제품 사용방법</a>
+    </nav>
+
+
+    <!-- 본문 -->
+  <section class="product-intro-section">
+    <h2 class="sub-title">이동식 진공청소기의 방식을 완전 탈피한
+        <br>중앙집중식 진공 청소기</h2>
+    <div class="product-intro-layout">
+      <div class="intro-image">
+        <img src="images/1.png" alt="청소기 개통도">
+      </div>
+    </div>
+
+    <div class="intro-description">
+      <p>중앙집중식 청소기는 기기 본체를 일정한 장소(베란다 또는 다용도실)에 설치하여 청소 시 먼지에 의한 실내 오염을 제거한 환경 친화적 차세대 진공 청소 시스템입니다.
+         청소용 호스만 들고 다니면서 스위치를 누르면 자동적으로 청소기가 작동되면서 보다 손쉽고 빠르게 청소가 됩니다.</p>
+    </div>
   </section>
 
-  <!-- 주소 + 지도 -->
- <section class="location-wrapper">
-  <div class="location-info">
-    <h2>찾아오시는 길</h2>
+    <!--하단-->
+    <footer>
+      <img src="images/black_logo.svg" alt="JINYANGTECH 로고">
+      <div class="info">
+        <p>회사명 : 진양테크 | 주소 : 경북 칠곡군 기산면 영리1길 14</p>
+        <p>PHNOE : 010 - 2528 - 1625 | TEL : 054 - 977 - 1624</p>
+        <p>이메일: kdgk331@hanmail.net | FAX: 054-977-1622 | </p>
+      </div>
+    </footer>
 
-    <div class="info-item">
-      <img src="images/gps.svg" alt="주소 아이콘" />
-      <strong>주소</strong>
-      <p class="address">경북 칠곡군 기산면 영리1길 14</p>
-    </div>
-
-    <div class="info-item">
-      <img src="images/email.svg" alt="이메일 아이콘" />
-      <strong>E-Mail</strong>
-      <p class="address">kdgk331@hanmail.net</p>
-    </div>
-
-    <div class="info-item">
-      <img src="images/PHONE.svg" alt="휴대폰 아이콘" />
-      <strong>PHONE</strong>
-      <p class="address">010-2528-1625</p>
-    </div>
-
-    <div class="info-item">
-      <img src="images/TEL.svg" alt="전화 아이콘" />
-      <strong>TEL</strong>
-      <p class="address">054-977-1624</p>
-    </div>
-
-    <div class="info-item">
-      <img src="images/fax.svg" alt="팩스 아이콘" />
-      <strong>FAX</strong>
-      <p class="address">054-977-1622</p>
-    </div>
-  </div>
-
-  <div class="location-map">
-    <div id="daumRoughmapContainer1752652677289" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-  </div>
-</section>
-
-
-
-
-  <!-- 푸터 -->
-  <footer>
-    <img src="images/black_logo.svg" alt="JINYANGTECH 로고" />
-    <div class="info">
-      <p>회사명 : 진양테크 | 주소 : 경북 칠곡군 기산면 영리1길 14</p>
-      <p>PHONE : 010-2528-1625 | TEL : 054-977-1624</p>
-      <p>이메일: kdgk331@hanmail.net | FAX: 054-977-1622</p>
-    </div>
-  </footer>
-  
-  <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
-  <script src="company.js"></script>
-  <script src="mobile.js"></script>
-</body>
+    <script src="mobile.js"></script>
+  </body>
 </html>
