--- a/product-types-B.html
+++ b/product-types-B.html
@@ -47,9 +47,8 @@
           <a href="#" class="has-sub">- 제품소개</a>
           <ul class="sub-dropdown">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
-            <li><a href="product-intro_B-3.html">제품 장점</a></li>
-            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-2.html">제품 장점</a></li>
+            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -109,9 +108,8 @@
           <button class="sub-dropdown-btn">- 제품소개</button>
           <ul class="sub-dropdown-content">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
-            <li><a href="product-intro_B-3.html">제품 장점</a></li>
-            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-2.html">제품 장점</a></li>
+            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -144,109 +142,51 @@
     <p>다양한 종류와 사양을 갖추어, 사용 환경에 최적화된 제품을 제공합니다.</p>
   </section>
 
-  <!-- 제품 카드 리스트 -->
-  <div class="product-card">
-    <div class="product-image">
-      <img src="images/2.png" alt="SVC – 7S/SR" />
-    </div>
-    <div class="product-content">
-      <h2>SVC - 7S/SR</h2>
-      <table>
-        <thead>
-          <tr><th>항목</th><th>단위</th><th>풍량</th></tr>
-        </thead>
-        <tbody>
-          <tr><td>형태</td><td>-</td><td>벽걸이형</td></tr>
-          <tr><td>방식</td><td>-</td><td>백필터식(2중필터)</td></tr>
-          <tr><td>장점</td><td>-</td><td>뛰어난 흡입력</td></tr>
-          <tr><td>소음</td><td>db</td><td>저소음 (60)</td></tr>
-          <tr><td>필터용량</td><td>ℓ</td><td>12</td></tr>
-          <tr><td>제품크기</td><td>mm</td><td>W400×D220×H500</td></tr>
-          <tr><td>Wireless(무선)</td><td>-</td><td>유무선 겸용</td></tr>
-          <tr><td>VACUUM(진공)</td><td>mmH₂O</td><td>2600</td></tr>
-          <tr><td>AIR FLOW(기류)</td><td>㎥/h</td><td>174</td></tr>
-          <tr><td>소비전력</td><td>W</td><td>1300</td></tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
+ <style>
+    body {
+      margin: 0;
+      font-family: 'Pretendard', 'Noto Sans KR', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      text-align: center;
+      padding: 80px 20px;
+    }
 
-  <div class="product-card">
-    <div class="product-image">
-      <img src="images/3.png" alt="SVC – 9S/SR" />
-    </div>
-    <div class="product-content">
-      <h2>SVC - 9S/SR</h2>
-      <table>
-        <thead>
-          <tr><th>항목</th><th>단위</th><th>풍량</th></tr>
-        </thead>
-        <tbody>
-          <tr><td>형태</td><td>-</td><td>벽걸이형</td></tr>
-          <tr><td>방식</td><td>-</td><td>백필터식(2중필터)</td></tr>
-          <tr><td>장점</td><td>-</td><td>뛰어난 흡입력</td></tr>
-          <tr><td>소음</td><td>db</td><td>저소음 (60)</td></tr>
-          <tr><td>필터용량</td><td>ℓ</td><td>12</td></tr>
-          <tr><td>제품크기</td><td>mm</td><td>W280×D230×H620</td></tr>
-          <tr><td>Wireless(무선)</td><td>-</td><td>유무선 겸용</td></tr>
-          <tr><td>VACUUM(진공)</td><td>mmH₂O</td><td>2600</td></tr>
-          <tr><td>AIR FLOW(기류)</td><td>㎥/h</td><td>174</td></tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
+    .notice-container {
+      max-width: 600px;
+      margin: 0 auto;
+    }
 
-  <div class="product-card">
-    <div class="product-image">
-      <img src="images/4.png" alt="SVC – 7B/BR" />
-    </div>
-    <div class="product-content">
-      <h2>SVC - 7B/BR</h2>
-      <table>
-        <thead>
-          <tr><th>항목</th><th>단위</th><th>풍량</th></tr>
-        </thead>
-        <tbody>
-          <tr><td>형태</td><td>-</td><td>벽걸이형</td></tr>
-          <tr><td>방식</td><td>-</td><td>백필터식(2중필터)</td></tr>
-          <tr><td>장점</td><td>-</td><td>뛰어난 흡입력</td></tr>
-          <tr><td>소음</td><td>db</td><td>저소음 (60)</td></tr>
-          <tr><td>필터용량</td><td>ℓ</td><td>12</td></tr>
-          <tr><td>제품크기</td><td>mm</td><td>φ285×H800</td></tr>
-          <tr><td>Wireless(무선)</td><td>-</td><td>유무선 겸용</td></tr>
-          <tr><td>VACUUM(진공)</td><td>mmH₂O</td><td>2600</td></tr>
-          <tr><td>AIR FLOW(기류)</td><td>㎥/h</td><td>174</td></tr>
-          <tr><td>소비전력</td><td>W</td><td>1300</td></tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
+    .notice-container h1 {
+      font-size: 2.4rem;
+      margin-bottom: 20px;
+    }
 
-  <div class="product-card">
-    <div class="product-image">
-      <img src="images/5.png" alt="SVC – 7C/CR" />
-    </div>
-    <div class="product-content">
-      <h2>SVC - 7C/CR</h2>
-      <table>
-        <thead>
-          <tr><th>항목</th><th>단위</th><th>풍량</th></tr>
-        </thead>
-        <tbody>
-          <tr><td>형태</td><td>-</td><td>벽걸이형</td></tr>
-          <tr><td>방식</td><td>-</td><td>Cycron(1필터)</td></tr>
-          <tr><td>장점</td><td>-</td><td>뛰어난 흡입력</td></tr>
-          <tr><td>소음</td><td>db</td><td>저소음 (60)</td></tr>
-          <tr><td>필터용량</td><td>ℓ</td><td>14</td></tr>
-          <tr><td>제품크기</td><td>mm</td><td>φ285×H700</td></tr>
-          <tr><td>Wireless(무선)</td><td>-</td><td>유무선 겸용</td></tr>
-          <tr><td>VACUUM(진공)</td><td>mmH₂O</td><td>2600</td></tr>
-          <tr><td>AIR FLOW(기류)</td><td>㎥/h</td><td>174</td></tr>
-          <tr><td>소비전력</td><td>W</td><td>1300</td></tr>
-        </tbody>
-      </table>
-    </div>
+    .notice-container p {
+      font-size: 1.1rem;
+      color: #666;
+    }
+
+    .coming-soon-badge {
+      display: inline-block;
+      margin-top: 40px;
+      padding: 12px 24px;
+      background-color: #eee;
+      border-radius: 30px;
+      font-size: 1rem;
+      color: #888;
+      letter-spacing: 1px;
+    }
+  </style>
+</head>
+<body>
+  <div class="notice-container">
+    <h1>이 페이지는 현재 준비 중입니다.</h1>
+    <p>제품 구성도에 대한 정보는 곧 업데이트될 예정입니다.</p>
+    <div class="coming-soon-badge">COMING SOON</div>
   </div>
+</body>
+</html>
 
     <!--하단-->
     <footer>
