--- a/supplies_B-1.html
+++ b/supplies_B-1.html
@@ -47,9 +47,8 @@
           <a href="#" class="has-sub">- 제품소개</a>
           <ul class="sub-dropdown">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
-            <li><a href="product-intro_B-3.html">제품 장점</a></li>
-            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-2.html">제품 장점</a></li>
+            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -109,9 +108,8 @@
           <button class="sub-dropdown-btn">- 제품소개</button>
           <ul class="sub-dropdown-content">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
-            <li><a href="product-intro_B-3.html">제품 장점</a></li>
-            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-2.html">제품 장점</a></li>
+            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -141,7 +139,7 @@
 <!-- 파란제목 -->
   <section class="blue-title">
     <h1>소모품</h1>
-    <p>중앙집중식 청소기 소모품 구성 소개</p>
+    <p>전열교환기 소모품 판매 구성 소개</p>
   </section>
 
   <!--본문--> 
@@ -150,65 +148,30 @@
 
       <div class="tool-item">
         <div class="tool-image-box">
-          <img src="images/A_1.png" alt="손잡이(유.무선 겸용)">
+          <img src="images/C_1.png" class="c-1_image" alt="열교환소자">
         </div>
-        <p>손잡이(유.무선 겸용)</p>
+        <p>열교환소자</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
-          <img src="images/A_2.png" alt="무선콘트롤(외부용)">
+          <img src="images/C_2.png" class="c-2_image" alt="프리필터">
         </div>
-        <p>무선콘트롤(외부용)</p>
+        <p>프리필터</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
-          <img src="images/A_3.png" alt="전용 브러쉬">
+          <img src="images/C_3.png" class="c-3_image" alt="미디움필터">
         </div>
-        <p>전용 브러쉬</p>
+        <p>미디움필터</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
-          <img src="images/A_4.png" alt="청소호스(7.5m)">
+          <img src="images/C_4.png" class="c-4_image" alt="헤파필터">
         </div>
-        <p>청소호스(7.5m)</p>
-      </div>
-
-      <div class="tool-item">
-        <div class="tool-image-box">
-          <img src="images/A_5.png" alt="호스걸이">
-        </div>
-        <p>호스걸이</p>
-      </div>
-
-      <div class="tool-item">
-        <div class="tool-image-box">
-          <img src="images/A_6.png" alt="소파전용브러쉬">
-        </div>
-        <p>소파전용브러쉬</p>
-      </div>
-
-      <div class="tool-item">
-        <div class="tool-image-box">
-          <img src="images/A_7.png" alt="가구용브러쉬">
-        </div>
-        <p>가구용브러쉬</p>
-      </div>
-
-      <div class="tool-item">
-        <div class="tool-image-box">
-          <img src="images/A_8.png" alt="틈새브러쉬">
-        </div>
-        <p>틈새브러쉬</p>
-      </div>
-
-      <div class="tool-item">
-        <div class="tool-image-box">
-          <img src="images/A_9.png" alt="길이조절대(1.5m)">
-        </div>
-        <p>길이조절대(1.5m)</p>
+        <p>헤파필터</p>
       </div>
   </div>
 </section>
