--- a/product-intro_B-1.html
+++ b/product-intro_B-1.html
@@ -47,9 +47,8 @@
           <a href="#" class="has-sub">- 제품소개</a>
           <ul class="sub-dropdown">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
-            <li><a href="product-intro_B-3.html">제품 장점</a></li>
-            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-2.html">제품 장점</a></li>
+            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -109,9 +108,8 @@
           <button class="sub-dropdown-btn">- 제품소개</button>
           <ul class="sub-dropdown-content">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
-            <li><a href="product-intro_B-3.html">제품 장점</a></li>
-            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-2.html">제품 장점</a></li>
+            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -137,37 +135,65 @@
   </ul>
 </div>
 
-
     <!-- 파란 배경 제목 -->
     <section class="blue-title">
       <h1>제품소개</h1>
-      <p>중앙집중식 청소기의 원리, 구성, 사용, 장점을 한눈에</p>
+      <p>전열교환기의 필요성부터 구조, 기능, 관리까지 한눈에</p>
     </section>
 
     <!-- 서브탭 메뉴 -->
   <nav class="submenu">
-      <a href="product-intro_B-1.html" class="active">중앙집중식 청소기</a>
-      <a href="product-intro_B-2.html">제품 구성도</a>
-      <a href="product-intro_B-3.html">제품 장점</a>
-      <a href="product-intro_B-4.html">제품 사용방법</a>
+      <a href="product-intro_B-1.html" class="active">전열교환기</a>
+      <a href="product-intro_B-2.html">제품 장점</a>
+      <a href="product-intro_B-3.html">사용방법 및 유지관리</a>
     </nav>
 
 
-    <!-- 본문 -->
-  <section class="product-intro-section">
-    <h2 class="sub-title">이동식 진공청소기의 방식을 완전 탈피한
-        <br>중앙집중식 진공 청소기</h2>
-    <div class="product-intro-layout">
-      <div class="intro-image">
-        <img src="images/1.png" alt="청소기 개통도">
-      </div>
-    </div>
+ <style>
+    body {
+      margin: 0;
+      font-family: 'Pretendard', 'Noto Sans KR', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      text-align: center;
+      padding: 80px 20px;
+    }
 
-    <div class="intro-description">
-      <p>중앙집중식 청소기는 기기 본체를 일정한 장소(베란다 또는 다용도실)에 설치하여 청소 시 먼지에 의한 실내 오염을 제거한 환경 친화적 차세대 진공 청소 시스템입니다.
-         청소용 호스만 들고 다니면서 스위치를 누르면 자동적으로 청소기가 작동되면서 보다 손쉽고 빠르게 청소가 됩니다.</p>
-    </div>
-  </section>
+    .notice-container {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .notice-container h1 {
+      font-size: 2.4rem;
+      margin-bottom: 20px;
+    }
+
+    .notice-container p {
+      font-size: 1.1rem;
+      color: #666;
+    }
+
+    .coming-soon-badge {
+      display: inline-block;
+      margin-top: 40px;
+      padding: 12px 24px;
+      background-color: #eee;
+      border-radius: 30px;
+      font-size: 1rem;
+      color: #888;
+      letter-spacing: 1px;
+    }
+  </style>
+</head>
+<body>
+  <div class="notice-container">
+    <h1>이 페이지는 현재 준비 중입니다.</h1>
+    <p>제품 구성도에 대한 정보는 곧 업데이트될 예정입니다.</p>
+    <div class="coming-soon-badge">COMING SOON</div>
+  </div>
+</body>
+</html>
 
     <!--하단-->
     <footer>
