--- a/product-intro_B-3.html
+++ b/product-intro_B-3.html
@@ -47,9 +47,8 @@
           <a href="#" class="has-sub">- 제품소개</a>
           <ul class="sub-dropdown">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
-            <li><a href="product-intro_B-3.html">제품 장점</a></li>
-            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-2.html">제품 장점</a></li>
+            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -109,9 +108,8 @@
           <button class="sub-dropdown-btn">- 제품소개</button>
           <ul class="sub-dropdown-content">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
-            <li><a href="product-intro_B-3.html">제품 장점</a></li>
-            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-2.html">제품 장점</a></li>
+            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -141,34 +139,62 @@
     <!-- 파란 배경 제목 -->
     <section class="blue-title">
       <h1>제품소개</h1>
-      <p>중앙집중식 청소기의 원리, 구성, 사용, 장점을 한눈에</p>
+      <p>전열교환기의 필요성부터 구조, 기능, 관리까지 한눈에</p>
     </section>
 
     <!-- 서브탭 메뉴 -->
   <nav class="submenu">
-      <a href="product-intro_B-1.html">중앙집중식 청소기</a>
-      <a href="product-intro_B-2.html">제품 구성도</a>
-      <a href="product-intro_B-3.html" class="active">제품 장점</a>
-      <a href="product-intro_B-4.html" >제품 사용방법</a>
+      <a href="product-intro_B-1.html" class="active">전열교환기</a>
+      <a href="product-intro_B-2.html">제품 장점</a>
+      <a href="product-intro_B-3.html">사용방법 및 유지관리</a>
     </nav>
 
-    <!--모바일용 이미지-->
-    <div class="benefit-container">
-    <picture>
-      <source srcset="images/good_1.svg" media="(max-width: 768px)" />
-      <img src="images/good_2.svg" alt="중앙 청소기 본체" class="background-image" />
-    </picture>
 
-      <!-- PC전용 점 설명 텍스트 -->
-      <div class="benefit-item top">강력한 흡입력<br><small>강력한 흡입력으로<br>미세먼지, 세균 제거</small></div>
-      <div class="benefit-item top-right">조용한 청소<br><small>저소음 설계로 청소<br>중에도 조용함 유지</small></div>
-      <div class="benefit-item right">경제성<br><small>연 1~2회 집진통<br>비우는 간편함</small></div>
-      <div class="benefit-item bottom-right">간단하고<br>편리한 청소<br><small>호스만 연결해<br>손쉽게 청소</small></div>
-      <div class="benefit-item bottom">깨끗하고 쾌적한<br>실내유지<br><small>먼지, 악취를 실외로 배출,<br>실내 항상 쾌적</small></div>
-      <div class="benefit-item bottom-left">다양한 청소도구<br><small>바닥, 가구, 틈새까지<br>다양한 툴 제공</small></div>
-      <div class="benefit-item left">각종 안전장치<br><small>자동 OFF,<br>과부하 방지 등</small></div>
-      <div class="benefit-item top-left">무선 원격조정<br><small>무선 리모컨으로<br>간편 작동</small></div>
-    </div>
+ <style>
+    body {
+      margin: 0;
+      font-family: 'Pretendard', 'Noto Sans KR', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      text-align: center;
+      padding: 80px 20px;
+    }
+
+    .notice-container {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .notice-container h1 {
+      font-size: 2.4rem;
+      margin-bottom: 20px;
+    }
+
+    .notice-container p {
+      font-size: 1.1rem;
+      color: #666;
+    }
+
+    .coming-soon-badge {
+      display: inline-block;
+      margin-top: 40px;
+      padding: 12px 24px;
+      background-color: #eee;
+      border-radius: 30px;
+      font-size: 1rem;
+      color: #888;
+      letter-spacing: 1px;
+    }
+  </style>
+</head>
+<body>
+  <div class="notice-container">
+    <h1>이 페이지는 현재 준비 중입니다.</h1>
+    <p>제품 구성도에 대한 정보는 곧 업데이트될 예정입니다.</p>
+    <div class="coming-soon-badge">COMING SOON</div>
+  </div>
+</body>
+</html>
 
   
     <!--하단-->
