--- a/product-types-A.html
+++ b/product-types-A.html
@@ -47,9 +47,8 @@
           <a href="#" class="has-sub">- 제품소개</a>
           <ul class="sub-dropdown">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
-            <li><a href="product-intro_B-3.html">제품 장점</a></li>
-            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-2.html">제품 장점</a></li>
+            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -109,9 +108,8 @@
           <button class="sub-dropdown-btn">- 제품소개</button>
           <ul class="sub-dropdown-content">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 구성도</a></li>
-            <li><a href="product-intro_B-3.html">제품 장점</a></li>
-            <li><a href="product-intro_B-4.html">제품 사용방법</a></li>
+            <li><a href="product-intro_B-2.html">제품 장점</a></li>
+            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
