product info_1 update

--- a/product-types-B.html
+++ b/product-types-B.html
@@ -135,58 +135,39 @@
   </ul>
 </div>
 
-
   <!--파란 제목-->
   <section class="blue-title">
     <h1>제품종류 및 사양</h1>
     <p>다양한 종류와 사양을 갖추어, 사용 환경에 최적화된 제품을 제공합니다.</p>
   </section>
 
- <style>
-    body {
-      margin: 0;
-      font-family: 'Pretendard', 'Noto Sans KR', sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-      text-align: center;
-      padding: 80px 20px;
-    }
-
-    .notice-container {
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    .notice-container h1 {
-      font-size: 2.4rem;
-      margin-bottom: 20px;
-    }
-
-    .notice-container p {
-      font-size: 1.1rem;
-      color: #666;
-    }
-
-    .coming-soon-badge {
-      display: inline-block;
-      margin-top: 40px;
-      padding: 12px 24px;
-      background-color: #eee;
-      border-radius: 30px;
-      font-size: 1rem;
-      color: #888;
-      letter-spacing: 1px;
-    }
-  </style>
-</head>
-<body>
-  <div class="notice-container">
-    <h1>이 페이지는 현재 준비 중입니다.</h1>
-    <p>제품 구성도에 대한 정보는 곧 업데이트될 예정입니다.</p>
-    <div class="coming-soon-badge">COMING SOON</div>
+ 
+ <!-- 제품 카드 리스트 -->
+  <!-- 🔧 150CMH 전열교환기 카드 -->
+<div class="product-box">
+  <div class="product-info">
+    <h2>150CMH</h2>
+    <table>
+      <thead>
+        <tr><th>항목</th><th>단위</th><th>측정값</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>정격풍량</td><td>CMH</td><td>150</td></tr>
+        <tr><td>기외정압</td><td>mmAq</td><td>64</td></tr>
+        <tr><td>소음</td><td>dB</td><td>34</td></tr>
+        <tr><td>소비전력</td><td>W</td><td>56</td></tr>
+        <tr><td>전열교환효율</td><td>%</td><td>81.3</td></tr>
+        <tr><td>난방교환효율</td><td>%</td><td>79</td></tr>
+        <tr><td>온도교환효율</td><td>%</td><td>77</td></tr>
+        <tr><td>제품크기</td><td>mm</td><td>555×698×230</td></tr>
+      </tbody>
+    </table>
   </div>
-</body>
-</html>
+  <div class="product-image">
+    <img src="images/6.png" alt="150CMH 제품 이미지" />
+    <img src="images/150.png" alt="150CMH 도면" />
+  </div>
+</div>
 
     <!--하단-->
     <footer>
