--- a/product-types-B.html
+++ b/product-types-B.html
@@ -143,9 +143,78 @@
 
  
  <!-- 제품 카드 리스트 -->
-<div class="product-box">
-  <div class="product-info">
+<div class="product-card">
+   <div class="product-content">
     <h2>150CMH</h2>
+<table>
+  <thead>
+    <tr>
+      <th>항목</th><th></th><th>단위</th><th>측정값</th>
+      
+      
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td rowspan="2">소비전력</td>
+      <td>W</td>
+      <td>49</td>
+    </tr>
+    <tr>
+      <td>-</td>
+      <td>58.2</td>
+    </tr>
+  </tbody>
+</table>
+
+
+  </div>
+    <div class="product-image">
+    <img src="images/6.png" alt="150CMH 제품 이미지" />
+    <img src="images/150.png" alt="150CMH 도면" />
+  </div>
+  </div>
+</div>
+
+<div class="product-card">
+   <div class="product-content">
+    <h2>250CMH</h2>
+<table>
+  <thead>
+    <tr><th>항목</th><th></th><th>단위</th><th>풍량</th></tr>
+  </thead>
+  <tbody>
+    <tr><td>열교환소재</td><td></td><td></td><td>특수제지</td></tr>
+    <tr><td>기외정압</td><td></td><td>mmAq</td><td>10</td></tr>
+    <tr><td>풍량</td><td></td><td>CMH</td><td>150</td></tr>
+
+    <tr><td rowspan="2">소비전력</td><td>냉방</td><td>W</td><td>54</td></tr>
+    <tr><td>난방</td><td>W</td><td>56</td></tr>
+  
+    <tr><td rowspan="2">에너지계수</td><td>냉방</td><td>%</td><td>9.13</td></tr>
+    <tr><td>난방</td><td>%</td><td>16.74</td></tr>
+
+    <tr><td rowspan="2">전열교환율</td><td>냉방</td><td>%</td><td>53</td></tr>
+    <tr><td>난방</td><td>%</td><td>72</td></tr>
+
+    <tr><td rowspan="2">온도교환율</td><td>냉방</td><td>%</td><td>76</td></tr>
+    <tr><td>난방</td><td>%</td><td>77</td></tr>
+
+    <tr><td>접속 구경</td><td></td><td>Φ</td><td>125</td></tr>
+    <tr><td>제품크기</td><td></td><td>mm</td><td>535 × 595 × 230</td></tr>
+  </tbody>
+</table>
+  </div>
+    <div class="product-image">
+    <img src="images/6.png" alt="250CMH 제품 이미지" />
+    <img src="images/250.png" alt="250CMH 도면" />
+  </div>
+  </div>
+</div>
+
+<div class="product-card">
+   <div class="product-content">
+    <h2>350CMH</h2>
     <table>
       <thead>
         <tr><th>항목</th><th>단위</th><th>측정값</th></tr>
@@ -162,12 +231,90 @@
       </tbody>
     </table>
   </div>
-  <div class="product-image">
-    <img src="images/6.png" alt="150CMH 제품 이미지" />
-    <img src="images/150.png" alt="150CMH 도면" />
+    <div class="product-image">
+    <img src="images/6.png" alt="350CMH 제품 이미지" />
+    <img src="images/350.png" alt="350CMH 도면" />
+  </div>
   </div>
 </div>
 
+<div class="product-card">
+   <div class="product-content">
+    <h2>500CMH</h2>
+    <table>
+      <thead>
+        <tr><th>항목</th><th>단위</th><th>측정값</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>정격풍량</td><td>CMH</td><td>150</td></tr>
+        <tr><td>기외정압</td><td>mmAq</td><td>64</td></tr>
+        <tr><td>소음</td><td>dB</td><td>34</td></tr>
+        <tr><td>소비전력</td><td>W</td><td>56</td></tr>
+        <tr><td>전열교환효율</td><td>%</td><td>81.3</td></tr>
+        <tr><td>난방교환효율</td><td>%</td><td>79</td></tr>
+        <tr><td>온도교환효율</td><td>%</td><td>77</td></tr>
+        <tr><td>제품크기</td><td>mm</td><td>555×698×230</td></tr>
+      </tbody>
+    </table>
+  </div>
+    <div class="product-image">
+    <img src="images/7.png" alt="500CMH 제품 이미지" />
+    <img src="images/500.png" alt="500CMH 도면" />
+  </div>
+  </div>
+</div>
+
+<div class="product-card">
+   <div class="product-content">
+    <h2>800CMH</h2>
+    <table>
+      <thead>
+        <tr><th>항목</th><th>단위</th><th>측정값</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>정격풍량</td><td>CMH</td><td>150</td></tr>
+        <tr><td>기외정압</td><td>mmAq</td><td>64</td></tr>
+        <tr><td>소음</td><td>dB</td><td>34</td></tr>
+        <tr><td>소비전력</td><td>W</td><td>56</td></tr>
+        <tr><td>전열교환효율</td><td>%</td><td>81.3</td></tr>
+        <tr><td>난방교환효율</td><td>%</td><td>79</td></tr>
+        <tr><td>온도교환효율</td><td>%</td><td>77</td></tr>
+        <tr><td>제품크기</td><td>mm</td><td>555×698×230</td></tr>
+      </tbody>
+    </table>
+  </div>
+    <div class="product-image">
+    <img src="images/7.png" alt="800CMH 제품 이미지" />
+    <img src="images/800-1000.png" alt="800CMH 도면" />
+  </div>
+  </div>
+</div>
+
+<div class="product-card">
+   <div class="product-content">
+    <h2>1000CMH</h2>
+    <table>
+      <thead>
+        <tr><th>항목</th><th>단위</th><th>측정값</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>정격풍량</td><td>CMH</td><td>150</td></tr>
+        <tr><td>기외정압</td><td>mmAq</td><td>64</td></tr>
+        <tr><td>소음</td><td>dB</td><td>34</td></tr>
+        <tr><td>소비전력</td><td>W</td><td>56</td></tr>
+        <tr><td>전열교환효율</td><td>%</td><td>81.3</td></tr>
+        <tr><td>난방교환효율</td><td>%</td><td>79</td></tr>
+        <tr><td>온도교환효율</td><td>%</td><td>77</td></tr>
+        <tr><td>제품크기</td><td>mm</td><td>555×698×230</td></tr>
+      </tbody>
+    </table>
+  </div>
+    <div class="product-image">
+    <img src="images/7.png" alt="1000CMH 제품 이미지" />
+    <img src="images/800-1000.png" alt="1000CMH 도면" />
+  </div>
+  </div>
+</div>
 
     <!--하단-->
     <footer>
